# hexapod_test

src/: model.config
src/hexapod_bringup/: CMakeLists.txt  package.xml
src/hexapod_bringup/launch/: gz_launcher.launch.py  gz_mv_launcher.launch.py  hexapod_trajectory_controller.launch.py  mv_rviz_launcher.launch.py  spawn_robot_traj_controllers.launch.py  stairs_world.launch.py  test_controllers.launch.py
src/hexapod_bringup/src/: sequence_prueba.py
src/hexapod_bringup/world/: ground_plane_custom.sdf  hexapod_world.world  test_world.world
src/hexapod_description/: CMakeLists.txt  model.config  package.xml
src/hexapod_description/gazebo/: hexapod.gazebo.xacro
src/hexapod_description/launch/: hexapod_display.launch.xml  hexapod_xacro_display.launch.xml
src/hexapod_description/meshes/: 1A_link.STL  1A_link_collider.dae  1B_link.STL  1C_link.STL  1C_link_collider.dae  1P_link.STL  2A_link.STL  2B_link.STL  2C_link.STL  2P_link.STL  3A_link.STL  3B_link.STL  3C_link.STL  3P_link.STL  4A_link.STL  4B_link.STL  4C_link.STL  4P_link.STL  5A_link.STL  5B_link.STL  5C_link.STL  5P_link.STL  (+6 more)
src/hexapod_moveit_config_new/: .setup_assistant  CMakeLists.txt  package.xml
src/hexapod_webots/: CMakeLists.txt  package.xml
src/hexapod_webots/controllers/drive_my_robot/: drive_my_robot.py
src/hexapod_webots/models/: 1B_link_collider.dae
src/hexapod_webots/worlds/: .empty.wbproj  .mundo.wbproj  .robot.wbproj  empty.wbt  robot copy.wbt
src/my_hexapod_commander_cpp/: CMakeLists.txt  package.xml
src/my_hexapod_commander_cpp/src/: gait_test.cpp  test_moveit.cpp
(+27 files in other folders)
